<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">熊孩子</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 首页导航 -->
    <string name="tab_menu_home">主页</string>
    <string name="tab_menu_search">搜索</string>
    <string name="tab_menu_brand">品牌</string>
    <string name="tab_menu_shopping">购物车</string>
    <string name="tab_menu_more">更多</string>
    <string name="more">更多</string>
    <string name="account_center">账户中心</string>
    <string name="scan_record">浏览记录</string>
    <string name="helpe_center">帮助中心</string>
    <string name="feed_center">用户反馈</string>
    <string name="about_us">关于</string>
    <string name="mine_orders">我的订单(0)</string>
    <string name="address_manager">地址管理</string>
    <string name="gift_card">优惠券/礼品卡</string>
    <string name="faverite">收藏夹</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="title_activity_help_list">HelpListActivity</string>
    <string name="count_centre">结算中心</string>
   <string name="submit_order">提交订单</string>
    <string name="sales">销量</string>

    <string name="price">价格</string>

    <string name="goodDegree">好评度</string>

    <string name="groundingTime">上架时间</string>

    <string name="goback">返回</string>

    <string name="prod_detail">商品详情</string>

    <string name="shopcar">加入购物车</string>

    <string name="collect">收藏本商品</string>

    <string name="prom_bulletin">促销快报</string>

    <string name="help_title">帮助中心</string>

    <string name="ordr_tel">01088499999</string>

    <string name="get_userinfo">userinfo.jsp</string>

    <string name="get_favorite_list">android_favorite.jsp</string>

    <string name="get_logistics">logistics.jsp</string>

    <string name="get_order_list">ordrlist.jsp</string>

    <string name="get_address_list">android_address.jsp</string>

    <string name="save_address">addresssave.jsp</string>

    <string name="app_host">http://172.16.42.250:8080/ECServer_D/</string>

    <string name="topic_plist">topic/plist</string>

    <string name="home">home</string>

    <string name="register">register</string>

    <string name="cart">cart</string>

    <string name="category">category</string>

    <string name="prodList">productlist</string>

    <string name="product">product</string>

    <string name="description">/product/description</string>

    <string name="topic">topic</string>

    <string name="search">search</string>

    <string name="searchRecommend">search/recommend</string>

    <string name="downning">正在下载</string>

    <string name="down_error">下载失败</string>

    <string name="address_manager_add">新增地址</string>

    <string name="custom_title_back">返回</string>

    <string name="please_input_product_name">请输入您要搜索的商品</string>

    <string name="address_select_area">选择地区</string>

    <string name="address_select_city">选择城市</string>

    <string name="address_select_province">选择省份</string>

    <string name="delete_success">删除成功</string>

    <string name="yes">是</string>

    <string name="no">否</string>

    <string name="toast">提示</string>

    <string name="add_succuess">添加成功!</string>

    <string name="edit_success">修改成功</string>

    <string name="address_manage">地址管理</string>

    <string name="select_address">选择地址</string>

    <string name="check_out">结算中心</string>

    <string name="set_success">设置成功</string>

    <string name="category_view">分类浏览</string>

    <string name="clear">清空</string>
    <string name="filt_title">筛选</string>

    <string name="userinfo">userinfo</string>

    <string name="orderlist">orderlist</string>

    <string name="orderdetail">orderdetail</string>

    <string name="favorites">favorites</string>

    <string name="help">help</string>

    <string name="checkout">checkout</string>
    <string name="uphandcheckout">提交订单</string>
    <string name="uphandsuccess">提交成功</string>

    <string name="ordersumbit">ordersumbit</string>

    <string name="ShoppingGuide">购物指南</string>
    <string name="AfterSale">售后服务</string>
    <string name="DeliveryMethod">配送方式</string>
    <string name="userfeedback">用户反馈</string>

</resources>