<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include
        layout="@layout/head_title"
        android:id="@id/relTop"
        >
    </include>

   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/head_bg"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="@color/white"
        android:textSize="@dimen/title_textsize" />-->

   <!-- android:background="@drawable/bg_shape_corners"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_account_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_center"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/arrow_right"
                android:text="@string/account_center" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_corners" />

        <RelativeLayout
            android:id="@+id/rl_scan_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_record"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/arrow_right"
                android:text="@string/account_center" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_corners" />

        <RelativeLayout
            android:id="@+id/rl_help_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helpe_center"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_corners" />

        <RelativeLayout
            android:id="@+id/rl_fadeback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed_center"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_corners" />

        <RelativeLayout
            android:id="@+id/rl_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/arrow_right" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_cus_tel"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_long_normal"
        android:text="客服电话:0371-66666666"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <!--<include
        android:id="@id/bottomBar"
        layout="@layout/activity_main"/>-->

</LinearLayout>