<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/home_backgroud" >

    <FrameLayout
        android:id="@id/fraTitle"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/head_bg" >

        <TextView
            android:id="@id/textTitle"
            style="@style/style_18_BEBEBE_BOLD"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/back"
            style="@style/style_15_EBEBEB_BOLD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_fanhui"
            android:gravity="center"
            />


    </FrameLayout>

    <LinearLayout
        android:id="@id/linRank"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fraTitle"
        android:background="@drawable/segment_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/textRankSale"
            style="@style/style_13_FFFFFF_BOLD"
            android:layout_width="60.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/segment_selected_1_bg"
            android:gravity="center"
            android:text="@string/sales"
            android:textColor="@color/white"/>

        <TextView
            android:id="@id/textRankPrice"
            style="@style/style_13_4B4B4B_BOLD"
            android:layout_width="60.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/segment_normal_2_bg"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/black"/>

        <TextView
            android:id="@id/textRankGood"
            style="@style/style_13_4B4B4B_BOLD"
            android:layout_width="60.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/segment_normal_2_bg"
            android:gravity="center"
            android:text="@string/goodDegree"
            android:textColor="@color/black"/>

        <TextView
            android:id="@id/textRankTime"
            style="@style/style_13_4B4B4B_BOLD"
            android:layout_width="60.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/segment_normal_3_bg"
            android:gravity="center"
            android:text="@string/groundingTime"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/filtTv"
            android:layout_width="60.0dip"
            android:layout_height="wrap_content"
            android:text="筛选"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            style="@style/style_13_4B4B4B_BOLD"
            android:background="@drawable/btn_redwhite_selector"
            android:textColor="@drawable/listview_item_tvcolorselector3"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/productLv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linRank"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/listview_item_line"
        android:listSelector="@drawable/index_item_bg" />
    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linRank"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/listview_item_line"
        android:listSelector="@drawable/index_item_bg"
        android:visibility="gone"
        android:numColumns="3"
        >

    </GridView>
 
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/productLv"
        android:src="@drawable/listview_item_line" />

    <TextView
        android:id="@id/textNull"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="暂无商品"
        android:visibility="gone" />
    <RelativeLayout
        android:id="@+id/search_failed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <TextView
            android:id="@+id/SearchNull"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="未找到搜索结果，请输入关键字"
            android:textSize="20sp"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SearchNull"
            android:text="返回继续搜索"
            android:textSize="18sp"
            android:id="@+id/tv_back"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@drawable/btn_textcolor_selector"
            android:background="@drawable/product_detail_shop"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/qiehuan"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/icon_pic_list_type"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        />

</RelativeLayout>