<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/head_bg">

        <ImageView
            android:id="@+id/back"
            style="@style/style_15_EBEBEB_BOLD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_fanhui"
            android:gravity="center"
            />

        <!--<Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/bg_title_btn"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="退出登录"
            android:textColor="@color/white"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:text="@string/account_center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_textsize"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!--android:background="@drawable/bg_shape_corners"-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/rl_account_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="12dp"
                    >

                    <TextView
                        android:id="@+id/tv_user_msg"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="用户名：yekTest"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_member_rank"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="会员等级：普通会员"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_all_grade"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="总积分：400"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/rl_my_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/tv_mine_orders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_orders"
                        android:textColor="@color/black"
                        android:textSize="16dp"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/arrow_right"
                        android:text="@string/account_center"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_corners"/>

                <RelativeLayout
                    android:id="@+id/rl_address_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_manager"
                        android:textColor="@color/black"
                        android:textSize="16dp"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/arrow_right"
                        android:text="@string/account_center"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_corners"/>

                <RelativeLayout
                    android:id="@+id/rl_discount_gift"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/tv_gift_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gift_card"
                        android:textColor="@color/black"
                        android:textSize="16dp"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/arrow_right"
                        android:text="@string/account_center"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_corners"/>

                <RelativeLayout
                    android:id="@+id/rl_collection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/tv_faverite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faverite"
                        android:textColor="@color/black"
                        android:textSize="16dp"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/arrow_right"
                        android:text="@string/account_center"/>
                </RelativeLayout>


                <Button
                    android:id="@+id/btn_exit"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/button_long_normal"
                    android:text="注销"
                    android:textColor="@color/white"
                    android:textSize="16dp" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>